Responsive Profile Image

--- a/resume8.html
+++ b/resume8.html
@@ -7,9 +7,13 @@
   
   <body>
     <header>
-      <img id=headshot src="https://media-exp1.licdn.com/dms/image/C4D03AQEshPgUvGEjgQ/profile-displayphoto-shrink_800_800/0/1601883524891?e=1631750400&v=beta&t=fdhoHTbW4fNWYUBJVDEFg7shVWGvBnxMeOOyp43TFzw" alt="Marli Steyl" width="200px">
+      <picture>
+          <Source media="(max-width: 650px)" srcset="https://raw.githubusercontent.com/MarliDesigns/resume8/main/Marli%20Steyl%20Small.jpg" id="image_small">
+          <Source media="(max-width: 1400px)" srcset="https://raw.githubusercontent.com/MarliDesigns/resume8/main/Marli%20Steyl%20Small.jpg" id="image_large">
+          <img src="https://raw.githubusercontent.com/MarliDesigns/resume8/main/Marli%20Steyl.jpg" alt="Marli Steyl" id="profile_image">
+      </picture>
         <h1 style="color: white;">Marli Steyl</h1>
-         <p style="color: white;">Graphic Designer & Front-End Developer</p>
+        <p style="color: white;">Graphic Designer & Front-End Developer</p>
     </header>
 
   <main class="main">
